LU-8854 liblustre: do not define strlcpy & strlcat

Liblustre should not define/export stlrcpy and strlcat,
because they may be defined by other libraries which
people want to link against.

Instead, use the preprocessor to let us keep calling
strl{cpy,cat}, while really defining ll_strl{cpy,cat}.

Signed-off-by: Patrick Farrell <paf@cray.com>
Change-Id: I8270b97af87d69711d65a55a1357f8849019a86b